@startuml

class StartEvent {
    name: String
    cfg_server_path: Path
    cfg_tracklist_path: Path
}
class StartEventResponse {
    id: u32
}

class StopEvent {
    id: u32
}
class StopEventResponse {
}

class ListServersEvent {
}
class ListServersEventResponse {
    servers: Vec<ServerInfo>
}

class GetServerInfoEvent {
    id: u32
}
class GetServerInfoEventResponse {
    server: ServerInfo
}

' Use Server instead ?
class ServerInfo {
    id: u32
}

StartEvent --> StartEventResponse
StopEvent --> StopEventResponse
ListServersEvent --> ListServersEventResponse
GetServerInfoEvent --> GetServerInfoEventResponse


@enduml